--- a/200-岛屿数量.md
+++ b/200-岛屿数量.md
@@ -6,20 +6,23 @@
 
 ### 采用DFS算法
 
-#### 解题思路：
+#### 解题思路
+
 1.从第一个位置开始遍历；
 2.若当前位置为'1'，则对它进行dfs遍历，并将其变为'0',以此作为标记，防止后续重新对其遍历
 3.设置了一个方向坐标，用于移动当前坐标
 
 ```python
 class Solution:
-    
+
+
     directions = [[-1, 0], [1, 0], [0, -1], [0, 1]]
-    
+
     def numIslands(self, grid: List[List[str]]) -> int:
         if not grid: 
             return 0
-        
+
+
         row = len(grid)
         col = len(grid[0])
         count = 0
