--- a/easy/53-最大子序和.md
+++ b/easy/53-最大子序和.md
@@ -28,3 +28,22 @@ $$
 **时间复杂度：$O(n)$**,**空间复杂度：$O(n)$**
 
 ## 算法题解
+
+```python
+class Solution:
+    # 动态规划
+    def maxSubArray(self, nums: List[int]) -> int:
+        # 当前最大子段和,就是以nums[i-1]为最后一项构成的序列的最大子段和
+        cur_sum = 0
+        # 最大子段和
+        total_sum = nums[0]
+        n = len(nums)
+        
+        for i in range(n):
+            if(cur_sum>0):
+                cur_sum += nums[i]
+            else:
+                cur_sum = nums[i]
+            total_sum = max(total_sum, cur_sum)
+        return total_sum
+```
